--- a/src/blocks/content/content.css
+++ b/src/blocks/content/content.css
@@ -2,7 +2,7 @@
 	max-width: 880px;
 	margin: 0 auto;
 	width: 100%;
-	flex-grow: 1;
+	/* flex-grow: 1; */
 }
 
 @media screen and (max-width: 1023px) {
