--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,8 +1,8 @@
 .footer {
 	max-width: 880px;
 	margin: 0 auto 60px;
-	flex-shrink: 0;
-	width: 100%;
+	/* flex-shrink: 0;
+	width: 100%; */
 }
 
 @media screen and (max-width: 1023px) {
