--- a/src/index.css
+++ b/src/index.css
@@ -1,52 +1,52 @@
 /* импорт normalize */
-@import url('./vendor/normalize.css');
+@import url("./vendor/normalize.css");
 /* импорт шрифты */
-@import url('./vendor/fonts/fonts.css');
+@import url("./vendor/fonts/fonts.css");
 /* импорт page */
-@import url('./blocks/page/page.css');
+@import url("./blocks/page/page.css");
 /* импорт header */
-@import url('./blocks/header/header.css');
-@import url('./blocks/header/__logo/header__logo.css');
+@import url("./blocks/header/header.css");
+@import url("./blocks/header/__logo/header__logo.css");
 /* импорт content */
-@import url('./blocks/content/content.css');
+@import url("./blocks/content/content.css");
 /* импорт секция profile */
-@import url('./blocks/profile/profile.css');
-@import url('./blocks/profile/__avatar-container/profile__avatar-container.css');
-@import url('./blocks/profile/__avatar/profile__avatar.css');
-@import url('./blocks/profile/__info/profile__info.css');
-@import url('./blocks/profile/__name/profile__name.css');
-@import url('./blocks/profile/__edit-btn/profile__edit-btn.css');
-@import url('./blocks/profile/__job/profile__job.css');
-@import url('./blocks/profile/__add-btn/profile__add-btn.css');
+@import url("./blocks/profile/profile.css");
+@import url("./blocks/profile/__avatar-container/profile__avatar-container.css");
+@import url("./blocks/profile/__avatar/profile__avatar.css");
+@import url("./blocks/profile/__info/profile__info.css");
+@import url("./blocks/profile/__name/profile__name.css");
+@import url("./blocks/profile/__edit-btn/profile__edit-btn.css");
+@import url("./blocks/profile/__job/profile__job.css");
+@import url("./blocks/profile/__add-btn/profile__add-btn.css");
 /* импорт секция elements */
-@import url('./blocks/elements/elements.css');
-@import url('./blocks/element/element.css');
-@import url('./blocks/element/__info/element__info.css');
-@import url('./blocks/element/__img/element__img.css');
-@import url('./blocks/element/__title/element__title.css');
-@import url('./blocks/element/__like-container/element__like-container.css');
-@import url('./blocks/element/__btn/element__btn-like.css');
-@import url('./blocks/element/__like-number/element__like-number.css');
-@import url('./blocks/element/__btn/_active/element__btn-like_active.css');
-@import url('./blocks/element/__btn/element__btn-trash.css');
+@import url("./blocks/elements/elements.css");
+@import url("./blocks/element/element.css");
+@import url("./blocks/element/__info/element__info.css");
+@import url("./blocks/element/__img/element__img.css");
+@import url("./blocks/element/__title/element__title.css");
+@import url("./blocks/element/__like-container/element__like-container.css");
+@import url("./blocks/element/__btn/element__btn-like.css");
+@import url("./blocks/element/__like-number/element__like-number.css");
+@import url("./blocks/element/__btn/_active/element__btn-like_active.css");
+@import url("./blocks/element/__btn/element__btn-trash.css");
 /* импорт секция footer */
-@import url('./blocks/footer/footer.css');
-@import url('./blocks/footer/__copyright/footer__copyright.css');
+@import url("./blocks/footer/footer.css");
+@import url("./blocks/footer/__copyright/footer__copyright.css");
 /* импорт popup */
-@import url('./blocks/popup/popup.css');
-@import url('./blocks/popup/_opened/popup_opened.css');
-@import url('./blocks/popup/__container/popup__container.css');
-@import url('./blocks/popup/__container/_type_avatar/popup_type_avatar.css');
-@import url('./blocks/popup/__close/popup__close.css');
-@import url('./blocks/popup/__title/popup__title.css');
-@import url('./blocks/popup/__form/popup__form.css');
-@import url('./blocks/popup/__input/popup__input.css');
-@import url('./blocks/popup/__input-error/popup__input-error.css');
-@import url('./blocks/popup/__btn-save/popup__btn-save.css');
-@import url('./blocks/popup/__container-show/popup__container-show.css');
-@import url('./blocks/popup/__photo/popup__photo.css');
-@import url('./blocks/popup/__subtitle/popup__subtitle.css');
-@import url('./blocks/popup/__input/_type/popup__input_type_error.css');
-@import url('./blocks/popup/__btn-save/_disabled/popup__btn-save_disabled.css');
-@import url('./blocks/popup/__input-error/_visible/popup__input-error_visible.css');
-@import url('./blocks/popup/_type/popup_type_show.css');
+@import url("./blocks/popup/popup.css");
+@import url("./blocks/popup/_opened/popup_opened.css");
+@import url("./blocks/popup/__container/popup__container.css");
+@import url("./blocks/popup/__container/_type_avatar/popup_type_avatar.css");
+@import url("./blocks/popup/__close/popup__close.css");
+@import url("./blocks/popup/__title/popup__title.css");
+@import url("./blocks/popup/__form/popup__form.css");
+@import url("./blocks/popup/__input/popup__input.css");
+@import url("./blocks/popup/__input-error/popup__input-error.css");
+@import url("./blocks/popup/__btn-save/popup__btn-save.css");
+@import url("./blocks/popup/__container-show/popup__container-show.css");
+@import url("./blocks/popup/__photo/popup__photo.css");
+@import url("./blocks/popup/__subtitle/popup__subtitle.css");
+@import url("./blocks/popup/__input/_type/popup__input_type_error.css");
+@import url("./blocks/popup/__btn-save/_disabled/popup__btn-save_disabled.css");
+@import url("./blocks/popup/__input-error/_visible/popup__input-error_visible.css");
+@import url("./blocks/popup/_type/popup_type_show.css");
