--- a/src/blocks/content/content.css
+++ b/src/blocks/content/content.css
@@ -5,7 +5,7 @@
 	/* flex-grow: 1; */
 }
 
-@media screen and (max-width: 1023px) {
+/* @media screen and (max-width: 1023px) {
 	.content {
 		margin: 0 50px 0;
 	}
@@ -15,4 +15,4 @@
 	.content {
 		margin: 0 19px 0;
 	}
-}
+} */
