--- a/src/blocks/content/content.css
+++ b/src/blocks/content/content.css
@@ -2,10 +2,11 @@
 	max-width: 880px;
 	margin: 0 auto;
 	width: 100%;
+	box-sizing: border-box;
 	/* flex-grow: 1; */
 }
 
-/* @media screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
 	.content {
 		margin: 0 50px 0;
 	}
@@ -15,4 +16,4 @@
 	.content {
 		margin: 0 19px 0;
 	}
-} */
+}
