--- a/src/blocks/content/content.css
+++ b/src/blocks/content/content.css
@@ -8,12 +8,12 @@
 
 @media screen and (max-width: 1023px) {
 	.content {
-		margin: 0 50px 0;
+		padding: 0 50px 0;
 	}
 }
 
 @media screen and (max-width: 767px) {
 	.content {
-		margin: 0 19px 0;
+		padding: 0 19px 0;
 	}
 }
